changed Perplexity link to Yahoo Finance

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -41,8 +41,8 @@
   </label>
 
   <label>
-    <input type="radio" [(ngModel)]="perplex" value="perplex" (change)="check(perplex)" />
-    Perplexity
+    <input type="radio" [(ngModel)]="yahoo" value="yahoo" (change)="check(yahoo)" />
+    YahooFolio
   </label>
 
   <label>
